fix conditional check bash_bootc_build

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -2701,7 +2701,11 @@ This macro defines a conditional expression that is evaluated as true
 if the remediation is performed during a build of a bootable container image.
 #}}
 {{%- macro bash_bootc_build() -%}}
+{{%- if pkg_system == "rpm" -%}}
 { rpm --quiet -q kernel rpm-ostree bootc && ! rpm --quiet -q openshift-kubelet && { [ -f "/run/.containerenv" ] || [ -f "/.containerenv" ]; }; }
+{{%- else -%}}
+/bin/false
+{{%- endif -%}}
 {{%- endmacro -%}}
 
 {{#
